blog-new complete

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -7,3 +7,5 @@
   <li><%= link_to blog.title, blog_path(blog) %> </li>
   </ul>
   <% end %>
+
+  <p><%= link_to 'Create New Blog Post', blog_new_path %> </p>
