--- a/app/views/blog/new.html.erb
+++ b/app/views/blog/new.html.erb
@@ -5,8 +5,7 @@
   <br />
   <%= form.label :content, 'Enter Blog Content' %>
   <%= form.text_area :content, size: "60x10" %>
-  <%= form.submit %>
-
+  <%= form.submit 'Create New Post' %>
   <% end %>
   <p> <%= link_to 'home', blogs_path %></p>
 
