--- a/app/views/blog/show.html.erb
+++ b/app/views/blog/show.html.erb
@@ -1,3 +1,4 @@
 <p><%= @blog.title %> </p>
 <p><%= @blog.content %> </p>
+<%= link_to 'Delete Blog Post', delete_blog_path(@blog), data: {"turbo-method": :delete, turbo_confirm: "Are you sure you want to delete #{@blog.title}" } %>
 <p> <%= link_to 'home', blogs_path %></p>
