--- a/app/views/blog/show.html.erb
+++ b/app/views/blog/show.html.erb
@@ -1,4 +1,5 @@
 <p><%= @blog.title %> </p>
 <p><%= @blog.content %> </p>
 <%= link_to 'Delete Blog Post', delete_blog_path(@blog), data: {"turbo-method": :delete, turbo_confirm: "Are you sure you want to delete #{@blog.title}" } %>
+<%= link_to 'Edit Blog Post', edit_blog_path(@blog) %>
 <p> <%= link_to 'home', blogs_path %></p>
