--- a/app/views/blog/new.html.erb
+++ b/app/views/blog/new.html.erb
@@ -1,11 +1,3 @@
-<%= form_with model: @blog do |form| %>
-<%= form.label :title, 'Enter Blog Title' %>
-  <%= form.text_field :title %>
-  <br />
-  <br />
-  <%= form.label :content, 'Enter Blog Content' %>
-  <%= form.text_area :content, size: "60x10" %>
-  <%= form.submit 'Create New Post' %>
-  <% end %>
-  <p> <%= link_to 'home', blogs_path %></p>
+<%= render partial: 'form', locals: {blog:@blog} %>
+
 
